Added exception handling file
Added exception handling file

--- a/AdvancedExceptionHandlingAssignment/AdvancedExceptionHandlingAssignment/AdvancedExceptionHandlingAssignment.csproj
+++ b/AdvancedExceptionHandlingAssignment/AdvancedExceptionHandlingAssignment/AdvancedExceptionHandlingAssignment.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{07C660AC-929A-4EE8-97B2-58694B3861A8}</ProjectGuid>
+    <ProjectGuid>{353E18AC-0307-4D0F-A959-05F3E8B0AC0E}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>TwentyOne</RootNamespace>
-    <AssemblyName>TwentyOne</AssemblyName>
+    <RootNamespace>AdvancedExceptionHandlingAssignment</RootNamespace>
+    <AssemblyName>AdvancedExceptionHandlingAssignment</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,18 +43,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Card.cs" />
-    <Compile Include="Dealer.cs" />
-    <Compile Include="Deck.cs" />
-    <Compile Include="FraudException.cs" />
-    <Compile Include="Game.cs" />
-    <Compile Include="IWalkAway.cs" />
-    <Compile Include="Player.cs" />
+    <Compile Include="NegException.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TwentyOneDealer.cs" />
-    <Compile Include="TwentyOneGame.cs" />
-    <Compile Include="TwentyOneRules.cs" />
+    <Compile Include="ZeroException.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
